--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
 
 }
 final supportLibraryVersion = '27.1.1'
-final RETROFIT_VERSION = '2.1.0'
+
 final mockito_version = '2.6.2'
 final expresseVersion = '3.0.1'
 final jUnitVersion = '4.12'
@@ -46,8 +46,7 @@ final runnerVersion = '1.0.1'
 final koin_version = '2.1.5'
 final anko_version = '0.10.4'
 final androidArchitectureVersion = '1.1.1'
-final coroutines_version = '1.3.5'
-final roomVersion = '1.0.0'
+
 final glideVersion = '4.6.1'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -67,19 +66,14 @@ dependencies {
     //Compomennts
     implementation "com.android.support.constraint:constraint-layout:1.1.0"
 
-    //GSON
-    implementation "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
 
-    //Retrofit
-    implementation "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
-
-    //Request logs
-    implementation "com.squareup.okhttp3:logging-interceptor:3.6.0"
 
     //Timber
     implementation "com.jakewharton.timber:timber:4.4.0"
 
     // Koin
+    // Koin AndroidX Scope features
+    implementation "org.koin:koin-androidx-scope:$koin_version"
     // Koin AndroidX Scope features
     implementation "org.koin:koin-androidx-scope:$koin_version"
     // Koin AndroidX ViewModel features
@@ -98,13 +92,6 @@ dependencies {
     annotationProcessor "android.arch.lifecycle:compiler:$androidArchitectureVersion"
     testImplementation "android.arch.core:core-testing:$androidArchitectureVersion"
 
-    //Kotlin Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
-
-    //Room
-    implementation "android.arch.persistence.room:runtime:$roomVersion"
-    kapt "android.arch.persistence.room:compiler:$roomVersion"
 
     //Glide
     implementation "com.github.bumptech.glide:glide:$glideVersion"
