--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,23 +40,23 @@ android {
 final supportLibraryVersion = '27.1.1'
 
 final mockito_version = '2.6.2'
-final expresseVersion = '3.0.1'
-final jUnitVersion = '4.12'
-final runnerVersion = '1.0.1'
+final expresseVersion = '3.0.2'
+final jUnitVersion = '4.13.1'
+final runnerVersion = '1.0.2'
 final koin_version = '2.1.5'
 final anko_version = '0.10.4'
 final androidArchitectureVersion = '1.1.1'
 
-final glideVersion = '4.6.1'
+final glideVersion = '4.11.0'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
 
     api project(':core')
 
@@ -66,10 +66,10 @@ dependencies {
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$expresseVersion"
 
     //Compomennts
-    implementation "com.android.support.constraint:constraint-layout:1.1.0"
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
 
     //Timber
-    implementation "com.jakewharton.timber:timber:4.4.0"
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
     // Koin
     // Koin AndroidX Scope features
