--- a/core/build.gradle
+++ b/core/build.gradle
@@ -35,8 +35,8 @@ android {
 }
 
 final coroutines_version = '1.3.5'
-final roomVersion = '1.0.0'
-final RETROFIT_VERSION = '2.1.0'
+final roomVersion = '1.1.1'
+final RETROFIT_VERSION = '2.9.0'
 final koin_version = '2.1.5'
 
 dependencies {
@@ -45,7 +45,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
@@ -64,7 +64,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
 
     //Request logs
-    implementation "com.squareup.okhttp3:logging-interceptor:3.6.0"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
 
     // Koin
     // Koin AndroidX Scope features
