--- a/core/build.gradle
+++ b/core/build.gradle
@@ -38,6 +38,7 @@ final coroutines_version = '1.3.5'
 final roomVersion = '1.1.1'
 final RETROFIT_VERSION = '2.9.0'
 final koin_version = '2.1.5'
+final mock_version = '1.10.2'
 
 dependencies {
 
@@ -69,4 +70,8 @@ dependencies {
     // Koin
     // Koin AndroidX Scope features
     implementation "org.koin:koin-androidx-scope:$koin_version"
+
+    //Mockk
+    testImplementation("io.mockk:mockk:$mock_version")
+
 }
